详细说明 starter的项目，先弄了个helloworldservice试试水，但也就刚写好打包，并没有在 另一个项目里面调用。 jdbc的项目，写好了statement的crud，但是ps的事务和连接池都还没写。

--- a/Week_05/Homework/pom.xml
+++ b/Week_05/Homework/pom.xml
@@ -96,6 +96,18 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>1.5.9.RELEASE</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.49</version>
+        </dependency>
     </dependencies>
 
 </project>
