--- a/Week_05/Homework/pom.xml
+++ b/Week_05/Homework/pom.xml
@@ -108,6 +108,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.49</version>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.4.5</version>
+        </dependency>
     </dependencies>
 
 </project>
